Carousel - Add book title and description

--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
   <div class="carousel">
     <!-- Featured Book 1 -->
     <div class="carousel-item">
-      <img src="https://dynamic.indigoimages.ca/books/9780811232432.jpg?scaleup=true&width=600&quality=85&lang=en" alt="">
-      <p> This is a description. </p>
+      <img src="https://dynamic.indigoimages.ca/books/9780811232432.jpg?scaleup=true&width=600&quality=85&lang=en" alt="No Longer Human" class="cover-image">
+      <div class="book-info">
+        <h3>No Longer Human - Osamu Dazai</h3>
+        <p>It tells the story of a troubled man incapable of revealing his true self to others, and who, instead, maintains a facade of hollow jocularity, later turning to a life of alcoholism and drug abuse before his final disappearance. The original title translates as "Disqualified as a human being" or "A failed human".</p>
+      </div>
     </div>
     <!-- Featured Book 2 -->
     <div class="carousel-item">
