--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="logo">
         <img src="./scr/logo.png" alt="Logo" width="200" height="200" />
       </div>
-      <ul class="nav-component">
+        <ul class="nav-component">
         <li>
           <div class="browse-component hear-dropdown">
             <details>
@@ -71,8 +71,8 @@
             </details>
           </div>
         </li>
-      </ul>
-      <div class="search-component">
+        </ul>
+        <div class="search-component">
         <div class="search-bar-component">
           <div class="search-bar">
             <div class="search-faucet">
@@ -107,13 +107,12 @@
             </div>
           </div>
         </div>
-        <ul class="auth-component">
-          <li class="hide-me">
-            <a class="btn" href="">Log In</a>
-          </li>
-          <li><a class="btnprimary" href="">Sign Up</a></li>
-        </ul>
-      </div>
+        <div class="user-options">
+          <a href="#login">Login</a>
+          <span class="divider">|</span>
+          <a href="#signup">Sign Up</a>
+        </div>
+        </div>
     </div>
 
     <!-- Trending Books Carousel Section -->
