login & signup page UI

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   role="presentation"
                 />
               </summary>
-              <div class="dropdown-compenent">
+              <div class="dropdown-component">
                 <ul class="dropdown-menu">
                   <li>
                     <a href="/subjects" data-ol-link-track="MainNav|Subjects">
@@ -108,9 +108,9 @@
           </div>
         </div>
         <div class="user-options">
-          <a href="#login">Login</a>
+          <a href="login.html" class="login-link">Login</a>
           <span class="divider">|</span>
-          <a href="#signup">Sign Up</a>
+          <a href="signup.html" class="signup-link">Sign Up</a>
         </div>
         </div>
     </div>
@@ -183,7 +183,7 @@
       <div class="container">
         <h2>About Little Library</h2>
         <p>Welcome...</p>
-        <a href="#join-now" class="cta-button">Join Now</a>
+        <a href="signup.html" class="signup-link cta-button">Join Now</a>
       </div>
     </section>
 
