--- a/index.html
+++ b/index.html
@@ -11,22 +11,14 @@
       <div class="logo">
         <img src="./scr/logo.png" alt="Logo" width="200" height="200" />
       </div>
-        <ul class="nav-component">
+      <ul class="nav-component">
         <li>
           <div class="browse-component hear-dropdown">
             <details>
               <summary>
                 Browse
-                <span class="shift"></span>
-                <img
-                  class="down-arrow"
-                  aria-hidden="true"
-                  src="./src/down.png"
-                  alt=""
-                  role="presentation"
-                />
               </summary>
-              <div class="dropdown-compenent">
+              <div class="dropdown-component">
                 <ul class="dropdown-menu">
                   <li>
                     <a href="/subjects" data-ol-link-track="MainNav|Subjects">
@@ -71,8 +63,8 @@
             </details>
           </div>
         </li>
-        </ul>
-        <div class="search-component">
+      </ul>
+      <div class="search-component">
         <div class="search-bar-component">
           <div class="search-bar">
             <div class="search-faucet">
@@ -107,12 +99,12 @@
             </div>
           </div>
         </div>
-        <div class="user-options">
+      </div>
+      <div class="user-options">
           <a href="#login">Login</a>
           <span class="divider">|</span>
           <a href="#signup">Sign Up</a>
-        </div>
-        </div>
+      </div>
     </div>
 
     <!-- Trending Books Carousel Section -->
