--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="search-faucet">
               <label class="search-faucet selector">
                 <span aria-hidden="true" class="search-facet-value"></span>
-                <select aria-label="Search by">
+                <select aria-label="Search by" id="search-filter">
                   <option value="all">All</option>
                   <option value="title">Title</option>
                   <option value="author">Author</option>
