--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="carousel-container">
           <div class="carousel">
             <!-- Featured Book 1 -->
-            <div class="carousel-item">
+            <div class="carousel-item" onclick="redirectToBookDetail('book1')">
               <img
                 src="https://dynamic.indigoimages.ca/books/9780811232432.jpg?scaleup=true&width=600&quality=85&lang=en"
                 alt="No Longer Human"
