--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
             </div>
           </div>
         </div>
-        <div class="user-options">
-          <a href="login.html" class="login-link">Login</a>
-          <span class="divider">|</span>
-          <a href="signup.html" class="signup-link">Sign Up</a>
-        </div>
-        </div>
+      </div>
+      <div class="user-options">
+        <a href="login.html" class="button login-link">Login</a> 
+        <a href="signup.html" class="button signup-link">Sign Up</a>
+      </div>
+        
 
     </div>
 
