--- a/viewProfile.html
+++ b/viewProfile.html
@@ -28,20 +28,27 @@
             </div>
           </div>
           <div class="card mt-3">
-            <h1>LOANS</h1>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <h6 class="mb-0">Book Title 1</h6>
-                <p class="text-secondary">Author: Author Name</p>
-                <p class="text-muted">Genre: Fiction</p>
-              </li>
-              <li class="list-group-item">
-                <h6 class="mb-0">Book Title 2</h6>
-                <p class="text-secondary">Author: Another Author</p>
-                <p class="text-muted">Genre: Mystery</p>
-              </li>
-              <!-- Add more list items for additional books -->
-            </ul>
+            <h2>Borrowed Books</h2>
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Borrowed Date</th>
+            <th>Due Date</th>
+        </tr>
+        <tr>
+            <td>Book 1</td>
+            <td>Author 1</td>
+            <td>01/01/2023</td>
+            <td>01/02/2023</td>
+        </tr>
+        <tr>
+            <td>Book 2</td>
+            <td>Author 2</td>
+            <td>01/03/2023</td>
+            <td>01/04/2023</td>
+        </tr>
+    </table>
           </div>
           
     </div>
