add to cart + view wishlist

--- a/ViewList.html
+++ b/ViewList.html
@@ -12,6 +12,21 @@
     <!-- Custom Styles for Olive Green Theme -->
     <style>
         /* Custom styles as before... */
+        #viewCartButton {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+        }
+
+        #announcement {
+            position: fixed;
+            top: 60px;
+            right: 20px;
+            display: none;
+            padding: 10px;
+            background-color: #28a745;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -39,10 +54,16 @@
     <div class="row" id="bookListContainer">
         <!-- Books will be dynamically added here -->
     </div>
+
+    <!-- Announcement for successful addition to cart -->
+    <div id="announcement">Book added to cart successfully!</div>
 </div>
 
+<!-- View Cart Button -->
+<button id="viewCartButton" class="btn btn-info" onclick="viewCart()">View Cart</button>
+
 <script>
-    // Fetch data from the local JSON file and dynamically create book cards
+    // Fetch data from books.json and dynamically create book cards
     fetch('books.json')
         .then(response => response.json())
         .then(data => {
@@ -59,7 +80,9 @@
                             <h5 class="card-title">${book.title}</h5>
                             <p class="card-text">Author: ${book.author}</p>
                             <p class="card-text">Genre: ${book.genre}</p>
-                            <a href="book-details.html?id=${book.id}" class="btn btn-primary">View Details</a>
+                            <p class="card-text">Year: ${book.publishedYear}</p>
+                            <button class="btn btn-success" onclick="addToCart(${book.id})">Add to Cart</button>
+                            <a href="book-details.html?id=${book.id}" class="btn btn-primary ml-2">View Details</a>
                         </div>
                     </div>
                 `;
@@ -68,6 +91,32 @@
             });
         })
         .catch(error => console.error('Error fetching data:', error));
+
+    // Function to handle adding a book to the cart
+    function addToCart(bookId) {
+        // Implement your logic to add the book to the cart
+        // You can use JavaScript to interact with your backend or local storage
+
+        // For simplicity, let's store the added books in local storage
+        let cart = JSON.parse(localStorage.getItem('cart')) || [];
+        cart.push(bookId);
+        localStorage.setItem('cart', JSON.stringify(cart));
+
+        // Display the announcement
+        const announcement = document.getElementById('announcement');
+        announcement.style.display = 'block';
+
+        // Hide the announcement after 2 seconds (adjust as needed)
+        setTimeout(() => {
+            announcement.style.display = 'none';
+        }, 2000);
+    }
+
+    // Function to navigate to the cart page
+    function viewCart() {
+        // Redirect to the cart page
+        window.location.href = "wishlist.html";
+    }
 </script>
 
 </body>
