--- a/book-details.html
+++ b/book-details.html
@@ -11,69 +11,122 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Custom Styles for Book Details Page -->
     <link rel="stylesheet" href="detail.css">
+    <style>
+        /* Add the styles from the old code here */
+        body {
+            font-family: 'Georgia', serif;
+            background-color: #f5ecd7;
+            margin: 0;
+            padding: 0;
+        }
+
+        .book-details-container {
+            display: flex;
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .book-cover {
+            width: 40%;
+            object-fit: cover;
+            border-radius: 10px 0 0 10px;
+        }
+
+        .book-info {
+            padding: 20px;
+        }
+
+        .book-title {
+            font-size: 24px;
+            color: #4e4034;
+        }
+
+        .book-author {
+            color: #827e7d;
+        }
+
+        .book-description {
+            margin-top: 10px;
+            color: #635b55;
+        }
+
+        .availability {
+            margin-top: 10px;
+            color: #2d5941;
+        }
+
+        .borrow-button {
+            margin-top: 10px;
+            padding: 10px 15px;
+            background-color: #b2d1b7;
+            color: #4e4034;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 
-<div class="container mt-5">
-    <!-- Book Details Content -->
-    <div class="row" id="bookDetailsContainer">
-        <!-- Book details will be dynamically added here -->
-    </div>
-</div>
+<div id="bookDetailsContainer"></div>
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-    // Function to get URL parameters
-    function getUrlParameter(name) {
-        name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
-        var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
-        var results = regex.exec(location.search);
-        return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
-    }
+        // Function to get URL parameters
+        function getUrlParameter(name) {
+            name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
+            var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
+            var results = regex.exec(location.search);
+            return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+        }
 
-    // Fetch book details based on the ID from the URL
-    var bookId = getUrlParameter('id');
+        // Fetch book details based on the ID from the URL
+        var bookId = getUrlParameter('id');
 
-    // Fetch data from the local JSON file
-    fetch('books.json')
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
-            }
-            return response.json();
-        })
-        .then(data => {
-            // Find the book with the matching ID
-            var book = data.find(book => book.id.toString() ===  bookId);
+        // Fetch data from the local JSON file
+        fetch('books.json')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                // Find the book with the matching ID
+                var book = data.find(book => book.id.toString() === bookId);
 
-            if (!book) {
-                throw new Error('Book not found');
-            }
+                if (!book) {
+                    throw new Error('Book not found');
+                }
 
-            // Update the content with the book details
-            var bookDetailsContainer = document.getElementById('bookDetailsContainer');
-            var bookDetailsHtml = `
-                <div class="col-md-6 offset-md-3">
-                    <div class="card">
-                        <img src="${book.cover}" class="card-img-top" alt="${book.title} Cover">
-                        <div class="card-body">
-                            <h2 class="card-title">${book.title}</h2>
-                            <p class="card-text">Author: ${book.author}</p>
-                            <p class="card-text">Genre: ${book.genre}</p>
-                            <p class="card-text">Description: ${book.description}</p>
-                            <p class="card-text">Availability: ${book.inStock ? 'In Stock' : 'Out of Stock'}</p>
+                // Update the content with the book details
+                var bookDetailsContainer = document.getElementById('bookDetailsContainer');
+                var bookDetailsHtml = `
+                    <div class="book-details-container">
+                        <img src="${book.cover}" class="book-cover" alt="${book.title} Cover">
+                        <div class="book-info">
+                            <h1 class="book-title">${book.title}</h1>
+                            <p class="book-author">Author: ${book.author}</p>
+                            <p class="book-description">Genre: ${book.genre}</p>
+                            <p class="book-description">Description: ${book.description}</p>
+                            <p class="availability">Availability: ${book.inStock ? 'In Stock' : 'Out of Stock'}</p>
                             <a href="index.html" class="btn btn-secondary">Back to Browse</a>
-                        </div>
-                    </div>
-                </div>
-            `;
-            bookDetailsContainer.innerHTML = bookDetailsHtml;
-        })
-        .catch(error => {
-            console.error('Error fetching or parsing data:', error);
-        });
-});
+                        </div>    
+                        
 
+                    </div>
+                
+            `;
+                bookDetailsContainer.innerHTML = bookDetailsHtml;
+            })
+            .catch(error => {
+                console.error('Error fetching or parsing data:', error);
+            });
+    });
 </script>
 
 </body>
