--- a/ViewList.html
+++ b/ViewList.html
@@ -23,6 +23,9 @@
             top: 60px;
             right: 20px;
             display: none;
+            padding: 10px;
+            background-color: #28a745;
+            color: #fff;
         }
     </style>
 </head>
@@ -52,8 +55,8 @@
         <!-- Books will be dynamically added here -->
     </div>
 
-    <!-- Announcement for successful addition or removal from cart -->
-    <div id="announcement" class="alert" role="alert"></div>
+    <!-- Announcement for successful addition to cart -->
+    <div id="announcement">Book added to cart successfully!</div>
 </div>
 
 <!-- View Cart Button -->
@@ -70,8 +73,6 @@
                 const card = document.createElement('div');
                 card.className = 'col-md-4 mb-4 book-card';
 
-                const isBookInCart = isBookInLocalStorage(book.id);
-
                 card.innerHTML = `
                     <div class="card">
                         <img src="${book.cover}" class="card-img-top" alt="${book.title} Cover">
@@ -80,9 +81,7 @@
                             <p class="card-text">Author: ${book.author}</p>
                             <p class="card-text">Genre: ${book.genre}</p>
                             <p class="card-text">Year: ${book.publishedYear}</p>
-                            <button class="btn ${isBookInCart ? 'btn-danger' : 'btn-success'}" onclick="toggleCart(${book.id})">
-                                ${isBookInCart ? 'Remove' : 'Add to Cart'}
-                            </button>
+                            <button class="btn btn-success" onclick="addToCart(${book.id})">Add to Cart</button>
                             <a href="book-details.html?id=${book.id}" class="btn btn-primary ml-2">View Details</a>
                         </div>
                     </div>
@@ -93,38 +92,18 @@
         })
         .catch(error => console.error('Error fetching data:', error));
 
-    // Function to check if the book is in the cart
-    function isBookInLocalStorage(bookId) {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        return cart.includes(bookId);
-    }
+    // Function to handle adding a book to the cart
+    function addToCart(bookId) {
+        // Implement your logic to add the book to the cart
+        // You can use JavaScript to interact with your backend or local storage
 
-    // Function to handle adding/removing a book to/from the cart
-    function toggleCart(bookId) {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        const isBookInCart = cart.includes(bookId);
+        // For simplicity, let's store the added books in local storage
+        let cart = JSON.parse(localStorage.getItem('cart')) || [];
+        cart.push(bookId);
+        localStorage.setItem('cart', JSON.stringify(cart));
 
-        if (isBookInCart) {
-            // Book is in the cart, remove it
-            const updatedCart = cart.filter(id => id !== bookId);
-            localStorage.setItem('cart', JSON.stringify(updatedCart));
-            showAnnouncement('Remove successfully!', 'alert-danger');
-        } else {
-            // Book is not in the cart, add it
-            cart.push(bookId);
-            localStorage.setItem('cart', JSON.stringify(cart));
-            showAnnouncement('Add successfully!', 'alert-success');
-        }
-
-        // Refresh the page to update the button text and style
-        location.reload();
-    }
-
-    // Function to display the announcement
-    function showAnnouncement(message, className) {
+        // Display the announcement
         const announcement = document.getElementById('announcement');
-        announcement.innerHTML = message;
-        announcement.className = `alert ${className}`;
         announcement.style.display = 'block';
 
         // Hide the announcement after 2 seconds (adjust as needed)
