--- a/wishlist.html
+++ b/wishlist.html
@@ -8,10 +8,48 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         /* Custom Styles for Wishlist */
-        .book-card img {
+        body {
+            font-family: 'Georgia', serif;
+            background-color: #f5ecd7; 
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #4e4034;
+        }
+
+        hr {
+            border-color: #827e7d;
+        }
+
+        .img-thumbnail {
             max-width: 100%;
             height: auto;
-            max-height: 60px; /* Set the maximum height as needed */
+            max-height: 60px;
+            border: none;
+            border-radius: 5px;
+        }
+
+        .btn-primary {
+            background-color: #b2d1b7;
+            color: #4e4034;
+            border: none;
+            border-radius: 5px;
+        }
+
+        .btn-danger {
+            background-color: #e07a5f;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
         }
 
         #confirmButton {
