--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="user-options">
         <a href="login.html" class="button login-link">Login</a> 
-        <a href="signup.html" class="button signup-link">Sign Up</a>
+        <a href="sign-up.html" class="button signup-link">Sign Up</a>
       </div>
         
 
@@ -114,52 +114,8 @@
       <div class="container">
         <!-- Trending books carousel -->
         <div class="carousel-container">
-          <div class="carousel">
-            <!-- Featured Book 1 -->
-            <div class="carousel-item" onclick="redirectToBookDetail('book1')">
-              <img
-                src="https://dynamic.indigoimages.ca/books/9780811232432.jpg?scaleup=true&width=600&quality=85&lang=en"
-                alt="No Longer Human"
-                class="cover-image"
-              />
-              <div class="book-info">
-                <h3>No Longer Human - Osamu Dazai</h3>
-                <p>
-                  It tells the story of a troubled man incapable of revealing
-                  his true self to others, and who, instead, maintains a facade
-                  of hollow jocularity, later turning to a life of alcoholism
-                  and drug abuse before his final disappearance. The original
-                  title translates as "Disqualified as a human being" or "A
-                  failed human".
-                </p>
-              </div>
-            </div>
-            <!-- Featured Book 2 -->
-            <div class="carousel-item">
-              <img
-                src="https://cdn-amz.woka.io/images/I/71H52+sSb4L.jpg"
-                alt=""
-                class="cover-image"
-              />
-              <div class="book-info">
-                <h3>The Book Thief - Markus Zusak</h3>
-                <p>
-                  The Book Thief is a historical fiction novel by the Australian
-                  author Markus Zusak, set in Nazi Germany during World War II.
-                  Published in 2006, The Book Thief became an international
-                  bestseller and was translated into 63 languages and sold 17
-                  million copies. It was adapted into the 2013 feature film, The
-                  Book Thief.
-                </p>
-              </div>
-            </div>
-            <!-- Featured Book 3 -->
-            <div class="carousel-item">
-              <img
-                src="https://images.penguinrandomhouse.com/cover/9780735218246"
-                alt=""
-              />
-            </div>
+          <div class="carousel" id="trendingCarousel">
+            <!-- Featured Books will be dynamically added here -->
           </div>
 
           <!-- Navigation Arrows -->
@@ -171,12 +127,65 @@
       </div>
     </section>
 
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  // Function to fetch book details from the JSON file
+  function fetchBookDetails(bookId) {
+    return fetch('books.json')
+      .then(response => response.json())
+      .then(data => {
+        return data.find(book => book.id === bookId);
+      });
+  }
+
+  // Function to add a carousel item for a book
+  function addCarouselItem(book) {
+    const trendingCarousel = document.getElementById('trendingCarousel');
+    const carouselItem = document.createElement('div');
+    carouselItem.className = 'carousel-item';
+    carouselItem.onclick = function () {
+      redirectToBookDetail(book.id);
+    };
+
+    carouselItem.innerHTML = `
+      <img src="${book.cover}" alt="${book.title}" class="cover-image" />
+      <div class="book-info">
+        <h3>${book.title} - ${book.author}</h3>
+        <p>${book.description}</p>
+      </div>
+    `;
+
+    trendingCarousel.appendChild(carouselItem);
+  }
+
+  // Function to display trending books
+  function displayTrendingBooks(bookIds) {
+    bookIds.forEach(bookId => {
+      fetchBookDetails(bookId)
+        .then(book => {
+          addCarouselItem(book);
+        })
+        .catch(error => {
+          console.error('Error fetching book details:', error);
+        });
+    });
+  }
+
+  // Trending book IDs
+  const trendingBookIds = [12, 13, 14];
+
+  // Display trending books
+  displayTrendingBooks(trendingBookIds);
+});
+</script>
+
+
     <!-- About Section -->
     <section class="about-section">
       <h2>About Little Library</h2>
       <div class="container">
         <p>Welcome...</p>
-        <a href="signup.html" class="signup-link cta-button">Join Now</a>
+        <a href="sign-up.html" class="signup-link cta-button">Join Now</a>
       </div>
     </section>
 
